--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
         "gulp-uglify": "3.0.2",
         "gulp-zip": "5.1.0",
         "inquirer": "8.2.4",
-        "postcss": "8.2.13",
+        "postcss": "^8.5.6",
         "postcss-color-mod-function": "3.0.3",
         "postcss-easy-import": "4.0.0",
         "pump": "3.0.0"
@@ -175,5 +175,9 @@
         "extends": [
             "@tryghost:theme"
         ]
+    },
+    "dependencies": {
+        "@tailwindcss/postcss": "^4.1.13",
+        "tailwindcss": "^4.1.13"
     }
 }
