--- a/package.json
+++ b/package.json
@@ -178,6 +178,8 @@
     },
     "dependencies": {
         "@tailwindcss/postcss": "^4.1.13",
+        "prettier": "^3.6.2",
+        "prettier-plugin-tailwindcss": "^0.6.14",
         "tailwindcss": "^4.1.13"
     }
 }
